# deltalake-with-polars

./: .gitignore  README.md  main.ipynb  pyproject.toml
data/: users.parquet
